[package]
name = "streamtools"
version = "0.7.1"
edition = "2021"
authors = ["extremeandy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/extremeandy/streamtools"
description = "Additional stream combinators"
readme = "README.md"

[dependencies]
futures = "0.3.26"
pin-project-lite = "0.2.9"
parking_lot = "0.12.1"
tokio = { version = "1.25.0", optional = true }
tokio-stream = { version = "0.1.11", optional = true }
tokio-util = { version = "0.7.7", optional = true }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-stream = { version = "0.1.11", features = ["sync", "time"] }
tokio-test = "0.4.2"

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
tokio = ["dep:tokio"]
tokio-stream = ["dep:tokio-stream"]
tokio-time = ["tokio/time", "tokio-stream/time"]
tokio-sync = ["tokio/sync", "tokio-stream/sync", "dep:tokio-util"]
test-util = ["tokio-time"]