[package]
name = "streamtools"
version = "0.7.4"
edition = "2021"
authors = ["extremeandy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/extremeandy/streamtools"
description = "Additional stream combinators"
readme = "README.md"

[dependencies]
futures = "0.3.28"
pin-project-lite = "0.2.9"
parking_lot = "0.12.1"
tokio = { version = "1.28.0", optional = true, features = ["time"] }
tokio-stream = { version = "0.1.14", optional = true, features = ["time"] }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-stream = { version = "0.1.14", features = ["sync", "time"] }
tokio-test = "0.4.2"

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
tokio-time = ["dep:tokio", "dep:tokio-stream"]
test-util = ["tokio-time"]
